Fixed cache test